tests/paczka1/fuzzy1/83634832.err
Error in line 2: ylx A797 21,9
Error in line 6: VpEnGSRO5 A797 29,3
Error in line 9: S318 A661 14,7
Error in line 12: ylx S318 70,0
Error in line 28: S318 A661 88,85
Error in line 26: S318 A661 35,1
